--- a/.github/workflows/master_trello-clone-web-app.yml
+++ b/.github/workflows/master_trello-clone-web-app.yml
@@ -24,10 +24,10 @@ jobs:
           dotnet-version: '8.x'
 
       - name: Build with dotnet
-        run: dotnet build --configuration Release
+        run: dotnet build Trello-Clone.Server/Trello-Clone.Server.csproj --configuration Release
 
       - name: dotnet publish
-        run: dotnet publish -c Release -o "${{env.DOTNET_ROOT}}/myapp"
+        run: dotnet publish Trello-Clone.Server/Trello-Clone.Server.csproj -c Release -o "${{env.DOTNET_ROOT}}/myapp"
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
@@ -65,4 +65,3 @@ jobs:
           app-name: 'trello-clone-web-app'
           slot-name: 'Production'
           package: .
-          
