--- a/trello-clone.client/package.json
+++ b/trello-clone.client/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
     "@hello-pangea/dnd": "^18.0.1",
     "@mui/material": "^7.1.0",
     "react": "^19.0.0",
