--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "@emotion/styled": "^11.14.0",
     "@hello-pangea/dnd": "^18.0.1",
     "@mui/material": "^7.0.0",
-    "axios": "^1.8.4"
+    "axios": "^1.8.4",
+    "react-router-dom": "^6.30.1"
   }
 }
