--- a/trello-clone.client/public/staticwebapp.config.json
+++ b/trello-clone.client/public/staticwebapp.config.json
@@ -1,9 +1,22 @@
 {
   "navigationFallback": {
     "rewrite": "/index.html",
-    "exclude": ["/images/*.{png,jpg,gif}", "/css/*"]
+    "exclude": [
+      "/images/*.{png,jpg,gif,svg}",
+      "/css/*",
+      "/js/*",
+      "/assets/*",
+      "*.{css,js,png,jpg,gif,svg,ico,woff,woff2,ttf,eot}"
+    ]
   },
+  "routes": [
+    {
+      "route": "/*",
+      "serve": "/index.html",
+      "statusCode": 200
+    }
+  ],
   "mimeTypes": {
-    ".json": "text/json"
+    ".json": "application/json"
   }
 }
